@@ -28,5 +28,6 @@ Peter Palfrader
 David F. Skoll
 Bogdan Pintea
 Gerfried Fuchs
+Stanislas Rouvelin
 
 $Id$
