@@ -1,3 +1,8 @@
+??? Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.27-1
+
+* Add in list of clusters to 'Add Host' window 
+  - thanks for Stanislas Rouvelin for the idea
+
 2009-06-02 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.26-1
 
 * Allow user to set a different ConnectTimeout and -o string (Tony Mancill)
